k8s/kritikos-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kritikos-web-deploy
spec:
  selector:
    matchLabels:
      run: kritikos-web-deploy
  replicas: 1
  template:
    metadata:
      labels:
        run: kritikos-web-deploy
    spec:
      containers:
      - name: kritikos-web-app
        image: gcr.io/kritikos-257816/kritikos:mvp8
        ports:
        - containerPort: 8080
