k8s/kritikos-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kritikos-web-service
spec:
  type: NodePort
  selector:
    run: kritikos-web-deploy
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
